{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 22,
  "lineage": "732e06dc-9ea2-10a6-e044-9becb49e3a00",
  "resources": [
    {
      "module": "module.common_setup",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg_info",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkSecurityGroups/HN1-nsg",
            "location": "westus2",
            "name": "HN1-nsg",
            "resource_group_name": "demo1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30100-30199",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "open-hana-db-ports",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.windows_bastion_host",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.create_hdb.module.nic_and_pip_setup",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkInterfaces/hn1-hdb0-nic",
            "ip_configuration": [
              {
                "name": "hn1-hdb0-nic-configuration",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/publicIPAddresses/hn1-hdb0-pip",
                "subnet_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/virtualNetworks/HN1-vnet/subnets/hdb-subnet"
              }
            ],
            "location": "westus2",
            "name": "hn1-hdb0-nic",
            "network_security_group_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkSecurityGroups/HN1-nsg",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "demo1",
            "tags": {
              "environment": "Terraform SAP HANA deployment"
            }
          },
          "dependencies": [
            "module.common_setup.azurerm_network_security_group.sap_nsg",
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.azurerm_subnet.subnet",
            "module.common_setup.azurerm_virtual_network.vnet",
            "module.common_setup.null_resource.configuration-check",
            "module.create_hdb.module.nic_and_pip_setup.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sap_nsg",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkSecurityGroups/HN1-nsg",
            "location": "westus2",
            "name": "HN1-nsg",
            "resource_group_name": "demo1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30100-30199",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "open-hana-db-ports",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.null_resource.configuration-check"
          ]
        }
      ]
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "hana-xsa-rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "hana-xsc-rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8001",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkSecurityGroups/HN1-nsg/securityRules/XSC-HTTP",
            "name": "XSC-HTTP",
            "network_security_group_name": "HN1-nsg",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "demo1",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.common_setup.azurerm_network_security_group.sap_nsg",
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.null_resource.configuration-check"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "4301",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkSecurityGroups/HN1-nsg/securityRules/XSC-HTTPS",
            "name": "XSC-HTTPS",
            "network_security_group_name": "HN1-nsg",
            "priority": 106,
            "protocol": "Tcp",
            "resource_group_name": "demo1",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.common_setup.azurerm_network_security_group.sap_nsg",
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.null_resource.configuration-check"
          ]
        }
      ]
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-rdp",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-winrm",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.windows_bastion_host",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.create_hdb.module.nic_and_pip_setup",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "hn1-hdb0-hana-on-azure1",
            "fqdn": "hn1-hdb0-hana-on-azure1.westus2.cloudapp.azure.com",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/publicIPAddresses/hn1-hdb0-pip",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "hn1-hdb0-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "demo1",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform SAP HANA deployment"
            }
          },
          "dependencies": [
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.null_resource.configuration-check"
          ]
        }
      ]
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/virtualNetworks/HN1-vnet/subnets/hdb-subnet",
            "name": "hdb-subnet",
            "network_security_group_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/networkSecurityGroups/HN1-nsg",
            "resource_group_name": "demo1",
            "virtual_network_name": "HN1-vnet"
          },
          "dependencies": [
            "module.common_setup.azurerm_network_security_group.sap_nsg",
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.azurerm_virtual_network.vnet",
            "module.common_setup.null_resource.configuration-check"
          ]
        }
      ]
    },
    {
      "module": "module.common_setup",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/21"
            ],
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/demo1/providers/Microsoft.Network/virtualNetworks/HN1-vnet",
            "location": "westus2",
            "name": "HN1-vnet",
            "resource_group_name": "demo1"
          },
          "dependencies": [
            "module.common_setup.azurerm_resource_group.hana-resource-group",
            "module.common_setup.null_resource.configuration-check"
          ]
        }
      ]
    }
  ]
}